added title and heading elements

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-
+<title>Colin's Poopy Website</title>
+<meta charset="UTF-8">
 <head>
   <body>
     <h1>poop</h1>
+    
   </body>
 </head>
 
