--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
 <head>
   <body>
     <h1>poop</h1>
-    
+    <p style="font-size:48px">
+&#128512; &#128516; &#128525; &#128151;
+</p>
   </body>
 </head>
 
