--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h2>World of DOGE</h2>
+  <link rel="stylesheet" href="style.css">
+</hstyle="property:value;"ead>
+<body style="background-color:black;" align="center";>
 
-    <div class="section"></div>
-    <div class="section2"> <h2 style="color: green"> $$$BUY THE DIP$$$ </h2> </div>
-    <div class="section3">&#128512; &#128516; &#128525; &#128151; </div>
-    <div class="video">
-            <div class="color-overlay"></div>
-            <video autoplay loop muted>
-                <source src="rat.mp4" type="video/mp4">
-            </video>
-    </p>
-<p style="font-family:courier;">DOGE TO THE MOON. DOGE-1, the first crypto-funded mission to the moon, is set to launch early next year following a new partnership between two blockchain companies and manufacturer Geometric Energy Corporation, also known as GEC. Smart exchange ecosystem Unizen and decentralized finance incubator ZenX announced Wednesday that they are in the process of building and launching DOGE-1, a 40-kilogram — roughly 88 pounds — CubeSat that will provide a new use case for cryptocurrencies. The CubeSat will travel to a “stable lunar orbit” in order to obtain lunar-spatial intelligence from sensors and cameras that will be sent back to GEC for analysis.</p>
+<h1 style ="color: white">Simon Says Game</h1>
+<p style= "color:white;" >Press play to start</p>
+<div class="container">
+<div button="play-button" id="play-button" onclick="play()" align="center">Play</div>
+
+  <div class="score-container">
+            <span>Score: </span>
+            <span id="score">0</span>
+        </div>
+    <div class="colors-container">
+        <div class="color skyblue" id="color0" data-color="color0"></div>
+        <div class="color violet" id="color1" data-color="color1"></div>
+        <div class="color orange" id="color2" data-color="color2"></div>
+        <div class="color green" id="color3" data-color="color3"></div>
+    </div>
 
 
-  </body>
-
-
+</body>
 </html>
