--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,13 @@
 <h1 style ="color: white">Simon Says Game</h1>
 <p style= "color:white;" >Press play to start</p>
 <div class="container">
-<div button="play-button" id="play-button" onclick="play()" align="center">Play</div>
+<div> <button class="play-button" id="play-button" onclick="play()">Play</div>
 
   <div class="score-container">
-            <span>Score: </span>
-            <span id="score">0</span>
+            <h4>Score:</h4>
+            <h4 id="score">0  </h4>
+            <h4>  High Score: </h4>
+            <h4 id="highscore">0</h4>
         </div>
     <div class="colors-container">
         <div class="color skyblue" id="color0" data-color="color0"></div>
@@ -21,6 +23,6 @@
         <div class="color green" id="color3" data-color="color3"></div>
     </div>
 
-
+<script src="index.js"></script>
 </body>
 </html>
