fixed some bugs

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <h1 style ="color: white">Simon Says Game</h1>
 <p style= "color:white;" >Press play to start</p>
 <div class="container">
-<div> <button class="play-button" id="play-button" onclick="play()">Play</div>
+<div> <button class="play-button" id="play-button" onclick="simonApp.play()">Play</div>
 
   <div class="score-container">
             <h4>Score:</h4>
