--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   <link rel="stylesheet" href="style.css">
 </hstyle="property:value;"ead>
 <body style="background-color:black;" align="center";>
+  <h2 style = "color: white">Art Project</h2>
+    <script src="canvas.js"></script>
+    <canvas id="canvas" width="900" height="500"> </canvas>
 
 <h1 style ="color: white">Simon Says Game</h1>
 <p style= "color:white;" >Press play to start</p>
